# sovereignguard

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  policies.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: adding-recognizers.md  api-reference.md  architecture.md  configuration.md  deployment.md  gdpr-compliance.md  input-output-report.md  launch-kit.md  multi-provider-setup.md  operations.md
examples/: basic_usage.py  flask_integration.py  langchain_integration.py  recouvr_integration.py
sovereignguard/: __init__.py  config.py  main.py
sovereignguard/audit/: immutable_logger.py  logger.py  metrics.py  report.py
sovereignguard/engine/: circuit_breaker.py  mapping.py  masker.py  pipeline.py  policy.py  restorer.py  semantic_restorer.py  session.py  smart_router.py
sovereignguard/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py  request_size.py
sovereignguard/proxy/: handler.py  passthrough.py  providers.py  router.py
sovereignguard/recognizers/: CONTRIBUTING.md  base.py  registry.py
sovereignguard/recognizers/fr/: address.py  nir.py  phone.py  siret.py
sovereignguard/recognizers/ma/: cin.py  ice.py  phone.py
sovereignguard/recognizers/tn/: __init__.py  address.py  company_id.py  national_id.py  (+2 more)
sovereignguard/utils/: crypto.py  exceptions.py  tokenizer.py
tests/: conftest.py  test_edge_cases.py  test_immutable_audit.py  test_integration.py  test_masker.py  test_middleware.py  test_new_recognizers.py  test_providers.py  test_proxy.py  test_recognizers.py  test_restorer.py  test_semantic_restorer.py
tests/fixtures/: sample_pii_texts.json  sample_requests.json
(+7 files in other folders)
